force-app/main/default/objects/Deprovision_User_Campaign_Reassignment__mdt/Deprovision_User_Campaign_Reassignment__mdt.object-meta.xml
<CustomObject>
    <description>When deprovisioning users we need to reassign their campaigns.
This metadata holds the mapping rules for each UserRole</description>
    <label>Deprovision User Campaign Reassignment</label>
    <pluralLabel>Deprovision User Campaign Reassignments</pluralLabel>
</CustomObject>