force-app/main/default/objects/Deprovision_User_Campaign_Reassignment__mdt/fields/New_Default_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Default_Owner_Id__c</fullName>
    <description>Who to reassign campaigns to.</description>
    <inlineHelpText>Who to reassign campaigns to.</inlineHelpText>
    <label>New Default Owner Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>