force-app/main/default/objects/Deprovision_User_Campaign_Reassignment__mdt/fields/New_Default_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Default_Owner_Name__c</fullName>
    <description>Name of the new owner.</description>
    <inlineHelpText>Name of the new owner.</inlineHelpText>
    <label>New Default Owner Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>