force-app/main/default/objects/Deprovision_User_Campaign_Reassignment__mdt/fields/Target_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Id__c</fullName>
    <description>Role Id for user</description>
    <inlineHelpText>Role Id for user</inlineHelpText>
    <label>Target Role Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>