force-app/main/default/objects/Deprovision_User_Campaign_Reassignment__mdt/fields/Target_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Name__c</fullName>
    <description>Role name of user</description>
    <inlineHelpText>Role name of user</inlineHelpText>
    <label>Target Role Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>