force-app/main/default/objects/Deprovision_User_Campaign_Reassignment__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Target_Role_Name__c</columns>
    <columns>Target_Role_Id__c</columns>
    <columns>New_Default_Owner_Name__c</columns>
    <columns>New_Default_Owner_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>